syntax = "proto3";
package virtengine.oracle.v1;

import "gogoproto/gogo.proto";
import "virtengine/oracle/v1/params.proto";
import "virtengine/oracle/v1/prices.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/oracle/v1";

// GenesisState defines the oracle module's genesis state
message GenesisState {
  // params holds the oracle module parameters
  Params params = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];

  // prices is the list of all historical price data entries
  repeated PriceData prices = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "prices",
    (gogoproto.moretags) = "yaml:\"prices\""
  ];

  // latest_height tracks the most recent block height for each price feed source
  repeated PriceDataID latest_height = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "latest_height",
    (gogoproto.moretags) = "yaml:\"latest_height\""
  ];
}
