syntax = "proto3";
package virtengine.veid.v1;

import "gogoproto/gogo.proto";
import "virtengine/veid/v1/types.proto";
import "virtengine/veid/v1/appeal.proto";
import "virtengine/veid/v1/compliance.proto";
import "virtengine/veid/v1/model.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/veid/v1";

// GenesisState defines the veid module's genesis state
message GenesisState {
  // IdentityRecords are the initial identity records
  repeated IdentityRecord identity_records = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "identity_records",
    (gogoproto.moretags) = "yaml:\"identity_records\""
  ];

  // Scopes are the initial identity scopes
  repeated IdentityScope scopes = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "scopes",
    (gogoproto.moretags) = "yaml:\"scopes\""
  ];

  // ApprovedClients are the initially approved clients
  repeated ApprovedClient approved_clients = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "approved_clients",
    (gogoproto.moretags) = "yaml:\"approved_clients\""
  ];

  // Params are the module parameters
  Params params = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];

  // Scores are the initial identity scores
  repeated IdentityScore scores = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "scores",
    (gogoproto.moretags) = "yaml:\"scores\""
  ];

  // BorderlineParams are the borderline fallback parameters
  BorderlineParams borderline_params = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "borderline_params",
    (gogoproto.moretags) = "yaml:\"borderline_params\""
  ];

  // ==========================================================================
  // Appeal Genesis State (VE-3020)
  // ==========================================================================

  // AppealRecords are the initial appeal records
  repeated AppealRecord appeal_records = 7 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "appeal_records",
    (gogoproto.moretags) = "yaml:\"appeal_records\""
  ];

  // AppealParams are the appeal system parameters
  AppealParams appeal_params = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "appeal_params",
    (gogoproto.moretags) = "yaml:\"appeal_params\""
  ];

  // ==========================================================================
  // Compliance Genesis State (VE-3021)
  // ==========================================================================

  // ComplianceRecords are the initial compliance records
  repeated ComplianceRecord compliance_records = 9 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "compliance_records",
    (gogoproto.moretags) = "yaml:\"compliance_records\""
  ];

  // ComplianceProviders are the registered compliance providers
  repeated ComplianceProvider compliance_providers = 10 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "compliance_providers",
    (gogoproto.moretags) = "yaml:\"compliance_providers\""
  ];

  // ComplianceParams are the compliance configuration parameters
  ComplianceParams compliance_params = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "compliance_params",
    (gogoproto.moretags) = "yaml:\"compliance_params\""
  ];

  // ==========================================================================
  // Model Versioning Genesis State (VE-3007)
  // ==========================================================================

  // MLModels are the registered ML models
  repeated MLModelInfo ml_models = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "ml_models",
    (gogoproto.moretags) = "yaml:\"ml_models\""
  ];

  // ModelVersionState is the current active model versions
  ModelVersionState model_version_state = 13 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "model_version_state",
    (gogoproto.moretags) = "yaml:\"model_version_state\""
  ];

  // ModelVersionHistory is the model version change history
  repeated ModelVersionHistory model_version_history = 14 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "model_version_history",
    (gogoproto.moretags) = "yaml:\"model_version_history\""
  ];

  // ModelParams are the model management parameters
  ModelParams model_params = 15 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "model_params",
    (gogoproto.moretags) = "yaml:\"model_params\""
  ];

  // PendingModelProposals are the pending model update proposals
  repeated ModelUpdateProposal pending_model_proposals = 16 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "pending_model_proposals",
    (gogoproto.moretags) = "yaml:\"pending_model_proposals\""
  ];

  // ValidatorModelReports are the validator model version reports
  repeated ValidatorModelReport validator_model_reports = 17 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "validator_model_reports",
    (gogoproto.moretags) = "yaml:\"validator_model_reports\""
  ];
}
